# web_testing

./: README.md  main.py  pyproject.toml
tests/: test_add_remove_page.py  test_basic_auth.py  test_broken_img.py  test_challenging_DOM.py  test_checkboxes.py  test_context_menu.py  test_digest_auth.py  test_dissapearing_elements.py  test_drag_and_drop.py  test_drop_down_list.py  test_dynamic_content.py  test_dynamic_controls.py  test_dynamic_loading.py  test_entry_ad.py  test_exit_intent.py  test_file_download.py  test_file_upload.py  test_floating_menu.py  test_form_auth.py  test_frames.py  test_geolocation.py  test_horizontal_slider.py  test_hovers.py  test_infinite_scroll.py  test_input.py  test_jquery_ui.py  test_js_alert.py  test_js_error.py  test_key_presses.py  test_large_DOM.py  test_main_page.py  test_multiple_windows.py  test_notification_message.py  test_redirector.py  test_shadow_dom.py  test_shifting_content.py  test_sortable_data_res.py  test_typos.py
tests/unit_tests/: basic_page_unit_tests.py
web_testing/: basic_methods.py  basic_page.py  basic_tests.py  the_internet_elements.py  the_internet_locators.py  web_driver_structure.py
