[tool.poetry]
name = "web-testing"
version = "0.1.0"
description = ""
authors = ["weibik <j-szkola@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.14.0"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.1"
bandit = "^1.7.5"
requests = "^2.31.0"
pytest-xdist = "^3.3.1"
pytest-durations = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "python main.py"